Provide unit testing for distributed transaction manager class